# gpxtools

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/cgen/: cgen.h
lib/codegen/: codegen.h
lib/ga/: CMakeLists.txt  algo.cpp  exception.cpp  ga.h  image.cpp  pixana.cpp  union.cpp  union.h
src/: CMakeLists.txt
src/base/: img_args.h  img_arr_args.h
src/snatch/: snatch.cpp  snatch.h
src/vectorize/: CMakeLists.txt  vectorize.cpp  vectorize.h
tests/: CMakeLists.txt  test-blob.cpp  test-vectorize.cpp
tests/data/: gamepad.xcf
